add some accepted words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "workblue", // c'est parti du code
-        "Natur", // c'est abbrevié
-        "Giancoli", // c'est un nom propre
-    ]
+	"cSpell.words": ["centrípeta", "Giancoli", "Natur", "workblue"]
 }
