--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["centrípeta", "Giancoli", "Natur", "workblue"]
+	"cSpell.words": [
+		"centrípeta",
+		"Giancoli",
+		"graficó",
+		"hipotetizó",
+		"Natur",
+		"workblue"
+	]
 }
