--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
 	"cSpell.words": [
 		"centrípeta",
+		"correlacionado",
 		"Giancoli",
+		"graficaron",
 		"graficó",
 		"hipotetizó",
+		"imprecisión",
 		"Natur",
 		"workblue"
 	]
